# Nasiko-AI-agent

./: .gitignore  .nasiko-local.env.example  Dockerfile.worker  LICENSE  Makefile  README.md  TERMINAL_GUIDE.md  dev_log.txt  docker-compose.local.yml  pyproject.toml  superuser_init.py  verify_agents.py
agent-gateway/: README.md  docker-compose.yml  start.sh
agent-gateway/chat-history-service/: Dockerfile  main.py  pyproject.toml
agent-gateway/plugins/chat-logger/: handler.lua  schema.lua
agent-gateway/plugins/nasiko-auth/: handler.lua  schema.lua
agent-gateway/registry/: Dockerfile  registry.py  requirements.txt
agent-gateway/router/: .gitignore  Dockerfile  README.md  pyproject.toml
agent-gateway/router/src/: main.py
agent-gateway/router/src/config/: __init__.py  settings.py
agent-gateway/router/src/core/: __init__.py  agent_client.py  agent_registry.py  routing_engine.py  session_history.py  vector_store.py
agent-gateway/router/src/entities/: __init__.py  router_entities.py
agent-gateway/router/src/services/: __init__.py  router_orchestrator.py
agent-gateway/router/src/utils/: __init__.py  agent_utils.py  file_utils.py  message_utils.py  payload_utils.py
agent-gateway/router/tests/: maf_tests.py  router_quality_tests.py  router_tests.py  semantic_search_exps.py
agents/a2a-compliance-checker/: .gitignore  Dockerfile  README.md
agents/a2a-compliance-checker/src/: __main__.py  compliance_toolset.py  openai_agent.py  tools.py
agents/a2a-github-agent/: Dockerfile
agents/a2a-translator/: .gitignore  pyproject.toml  run_with_phoenix.sh
agents/a2a-translator/src/: openai_agent.py  openai_agent_executor.py  translator_toolset.py
agents/agents/a2a-compliance-checker/: AgentCard.json  docker-compose.yml  pyproject.toml
agents/agents/a2a-compliance-checker/src/: agent.py  models.py  openai_agent_executor.py  policy_agent.py
agents/agents/a2a-github-agent/: AgentCard.json  (+3 more)
agents/agents/candidate-scoring/: Dockerfile  docker-compose.yml  pyproject.toml
agents/agents/interviewer-scheduler/: Agentcard.json  docker-compose.yml  pyproject.toml
agents/agents/interviewer-scheduler/src/: main.py
agents/candidate-scoring/: Agentcard.json
agents/resume-parser/: Agentcard.json  Dockerfile  docker-compose.yml  pyproject.toml
agents/shortlisting/: pyproject.toml
app/: .dockerignore  Dockerfile  Dockerfile.k8s-build-worker  docker-compose.app.yaml  main.py  pyproject.toml
app/adapters/: __init__.py  base_adapter.py  nanda_adapter.py
app/api/: auth.py  types.py
app/entity/: entity.py  n8n_entity.py  user_github_credentials_entity.py
app/repository/: agent_operations_repository.py  base_repository.py  chat_repository.py  github_repository.py  n8n_repository.py  registry_repository.py  repository.py  upload_status_repository.py
app/service/: agent_operations_service.py  agent_update_service.py  agent_upload_service.py  agent_upload_tracking_service.py  agentcard_service.py  chat_history_service.py  github_service.py  k8s_service.py  n8n_service.py  nanda_service.py  observability_service.py  orchestration_service.py  redis_search_service.py  service.py
app/utils/templates/a2a-webhook-agent/: AgentCard.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/utils/templates/a2a-webhook-agent/src/: __init__.py  __main__.py  webhook_agent.py  webhook_agent_executor.py
cli/: BINARY_BUILD_GUIDE.md  __init__.py  main.py  pyoxidizer.bzl  pyproject.toml  pytest.ini
cli/auth/: __init__.py  auth_commands.py  auth_manager.py
cli/commands/: __init__.py  access.py  chat_history.py  chat_send.py  github.py  n8n.py  observability.py  registry.py  search.py  upload_agent.py  user_management.py
cli/core/: __init__.py  api_client.py  settings.py
cli/groups/: __init__.py  access_group.py  agent_group.py  chat_group.py  github_group.py  images_group.py  local_group.py  n8n_group.py  observability_group.py  search_group.py  user_group.py
cli/k8s/: __init__.py  agent-rbac.yaml  kube-dashboard.yaml  utils.py
cli/k8s/charts/nasiko-platform/templates/: namespace.yaml
cli/k8s/charts/nasiko-platform/templates/infrastructure/: mongodb.yaml  ollama.yaml  phoenix.yaml  postgresql.yaml  redis.yaml
cli/k8s/charts/nasiko-platform/templates/infrastructure/buildkit/: deployment.yaml  namespace.yaml  pvc.yaml  regcred-secret.yaml  service.yaml  serviceaccount.yaml
cli/k8s/charts/nasiko-platform/templates/initialization/: superuser-init.yaml
cli/k8s/charts/nasiko-platform/templates/rbac/: clusterrole.yaml  clusterrolebinding.yaml  serviceaccount.yaml
cli/k8s/charts/nasiko-platform/templates/services/agent-gateway/: deployment.yaml  kong-migrations.yaml  kong-plugins-config.yaml  service-registry-deployment.yaml
cli/k8s/charts/nasiko-platform/templates/services/auth-service/: deployment.yaml
cli/k8s/charts/nasiko-platform/templates/services/n8n/: deployment.yaml  pvc.yaml  service.yaml
cli/k8s/charts/nasiko-platform/templates/services/nasiko-backend/: deployment.yaml
cli/k8s/charts/nasiko-platform/templates/services/nasiko-k8s-build-worker/: deployment.yaml
cli/k8s/charts/nasiko-platform/templates/services/nasiko-router/: deployment.yaml
cli/k8s/charts/nasiko-platform/templates/services/nasiko-web/: deployment.yaml
cli/setup/: app_setup.py  buildkit_setup.py  config.py  container_registry_setup.py  harbor_setup.py  k8s_setup.py  setup.py  terraform_state.py  utils.py
cli/setup/terraform/: __init__.py
cli/setup/terraform/aws/: __init__.py  main.tf  outputs.tf  variables.tf  versions.tf
cli/setup/terraform/digitalocean/: __init__.py  doks.tf  outputs.tf  provider.tf  variables.tf
cli/utils/: __init__.py  utils.py
docs/: getting-started.md
models/ollama/: docker-compose.yml  ollama_start.sh
orchestrator/: agent_builder.py  config.py  docker_utils.py  instrumentation_injector.py  redis_stream_listener.py  registry_manager.py  requirements.txt  superuser_manager.py
recruitment-app/: index.html  package-lock.json  package.json
recruitment-app/src/: App.tsx  index.css
worker/: __init__.py  k8s_build_worker.py
(+58 files in other folders)
