[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nasiko-cli"
version = "2.0.0"
description = "Command-line interface for Nasiko agent management platform"
license = "MIT"
authors = [
    {name = "Nasiko Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "kubernetes>=34.1.0",
    "docker>=7.1.0",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
nasiko = "main:main"

[project.urls]
Homepage = "https://github.com/arithmic/nasiko"
Repository = "https://github.com/arithmic/nasiko"
Issues = "https://github.com/arithmic/nasiko/issues"

[tool.setuptools]
py-modules = ["main"]
packages = ["setup", "setup.terraform", "setup.terraform.aws", "setup.terraform.digitalocean", "groups", "auth", "commands", "core", "utils", "k8s"]

[tool.setuptools.package-data]
"setup.terraform.aws" = ["*.tf"]
"setup.terraform.digitalocean" = ["*.tf"]
"k8s" = ["**/*.yaml", "**/*.yml"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nasiko_cli --cov-report=term-missing"
