[project]
name = "resume-parser"
version = "0.1.0"
description = "AI Agent for parsing resumes and extracting structured data"
authors = [
    { name = "Kaustubh", email = "kaustubh@example.com" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pdfplumber>=0.10.3",
    "openai>=1.12.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
