[project]
name = "a2a-webhook-agent"
version = "0.1.0"
description = "A2A Webhook agent that forwards messages to webhook endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.3.0",
    "click>=8.1.8",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"